name:                htrans
version:             0.1.1.0
synopsis:            Console tool for Yandex Translate Service
description:         Please see README.md
homepage:            https://github.com/githubuser/htrans#readme
license:             BSD3
license-file:        LICENSE
author:              Evgenij Kudinov 
maintainer:          johhy1313@gmail.com
copyright:           2016 Johhy
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable htrans
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Htrans.Logger,
                       Htrans.Cli
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       yandex-translate,
                       data-default-class,
                       transformers,
                       text,
                       optparse-applicative,
                       hslogger == 1.2.10

