name:                htrans
version:             0.2.1.1
synopsis:            Console tool for Yandex Translate Service
description:         Please see README.md
homepage:            https://github.com/githubuser/htrans#readme
license:             BSD3
license-file:        LICENSE
author:              Evgenij Kudinov 
maintainer:          johhy1313@gmail.com
copyright:           2016 Johhy
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Htrans.Logger,
                       Htrans.Cli,
                       Htrans.YandexTranslator, 
                       Htrans.XSelector,
                       Htrans.EndPoint,
                       Htrans.Screener,
                       Htrans.Types
  other-modules:       Paths_htrans
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       yandex-translate,
                       data-default-class,
                       transformers,
                       text,
                       hslogger == 1.2.10,
                       X11>=1.3,
                       unix,
                       random>=1.0,
                       utf8-string >= 1.0,
                       libnotify,
                       filepath,
                       optparse-generic

executable htranslator
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       htrans
        --               yandex-translate,
        --               data-default-class,
        --               transformers,
        --               text,
        --               hslogger == 1.2.10,
        --               X11>=1.3,
        --               unix,
        --               random>=1.0,
        --               utf8-string >= 1.0,
        --               libnotify,
        --               filepath,
        --               optparse-generic

